Can't bake combine, shadows, to active #40101

Closed
opened 2014-05-08 21:56:01 +02:00 by michalis zissiou · 17 comments

OSX 10.8.5
MacPro dualXeon 16 threads, ATI HD 5870
hash: 4c5fe54

bumps are supported now. When baking a combined map.
However, I baked an object space normal map and don's see any bumps there.
I also tried a tangent space, just to be sure and crash as expected. (it happens on 70% of the cases here)
These from multires.

Duplicated the mesh then, applied the multires modifier at level 1.
Gave it a new simple shader with an active texture.
Used it as active to bake into.
Tangent space, this time no crash, map is fine. Didn't catch any bumps though.
Diffuse worked,
However, impossible to bake to active a combined map, returns black. Tried distances… black.
This was working some releases back.
Missed something?

Bake to active, bakes color or AO (no bumps there) or normal maps only.
Everything else returns black, as if the active mess shadows the targeted mesh.
I don't get it. I tried a lot of distance values…

Uploading a blend file.
It is a multires and a simpler version as active around.
I don't include a texture map for bumps, any picture can serve. Sorry.
Download blend zip file here
https://dl.dropboxusercontent.com/u/24090090/yyyyyyyyyyyyyyy.blend.zip

OSX 10.8.5 MacPro dualXeon 16 threads, ATI HD 5870 hash: 4c5fe54 bumps are supported now. When baking a combined map. However, I baked an object space normal map and don's see any bumps there. I also tried a tangent space, just to be sure and crash as expected. (it happens on 70% of the cases here) These from multires. Duplicated the mesh then, applied the multires modifier at level 1. Gave it a new simple shader with an active texture. Used it as active to bake into. Tangent space, this time no crash, map is fine. Didn't catch any bumps though. Diffuse worked, However, impossible to bake to active a combined map, returns black. Tried distances… black. This was working some releases back. Missed something? Bake to active, bakes color or AO (no bumps there) or normal maps only. Everything else returns black, as if the active mess shadows the targeted mesh. I don't get it. I tried a lot of distance values… Uploading a blend file. It is a multires and a simpler version as active around. I don't include a texture map for bumps, any picture can serve. Sorry. Download blend zip file here https://dl.dropboxusercontent.com/u/24090090/yyyyyyyyyyyyyyy.blend.zip

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by michalis zissiou 2014-05-08 21:56:01 +02:00

Added subscriber: @michaliszissiou

Added subscriber: @michaliszissiou
  1. I open the file, press bake and have an error: "Error: Not initialized image marbleGrey.jpg"
  2. I replaced this image by another one, pressed bake and another error: "Error: No valid selected objects"
  3. I select "Cube.001" and then "Cube" press bake and it bakes fine.

It's not clear to me what your issue is. Can you reproduce the issue in a simple file that contains all that is needed (e.g., use an internal image, or pack one for the bump map), and that can be tested by simply opening the file and pressing "Bake"?

If you know what you expect please attach an image too.

Note: Instead of storing the file in dropbox upload them to the tracker (see the "Upload File" button in the Comments toolbox). And please don't zip the file, instead save as your blend file and mark "Compress" from inside Blender.

1. I open the file, press bake and have an error: "Error: Not initialized image marbleGrey.jpg" 2. I replaced this image by another one, pressed bake and another error: "Error: No valid selected objects" 3. I select "Cube.001" and then "Cube" press bake and it bakes fine. It's not clear to me what your issue is. Can you reproduce the issue in a simple file that contains all that is needed (e.g., use an internal image, or pack one for the bump map), and that can be tested by simply opening the file and pressing "Bake"? If you know what you expect please attach an image too. Note: Instead of storing the file in dropbox upload them to the tracker (see the "Upload File" button in the Comments toolbox). And please don't zip the file, instead save as your blend file and mark "Compress" from inside Blender.

Do you really think that the texture was the case?
A jpg file?
BTW, dropbox is just fine for me.
Hey,
I have to stop sleeping, lol, please, give me a brake.
Sorry, I had to say it.
I know, it has to go this way. Patience is required.

Do you really think that the texture was the case? A jpg file? BTW, dropbox is just fine for me. Hey, I have to stop sleeping, lol, please, give me a brake. Sorry, I had to say it. I know, it has to go this way. Patience is required.

It's not a matter of what is fine for you, but what makes easier for more people to help with debugging the issue. Having the file in the tracker means that in 10 years if a similar issue arises the file is still around.

Do you really think that the texture was the case?

I don't know, what I do know is that the easier you make to reproduce the issue, the quicker it goes away. That's why I may sound pedantic when insisting on the report to follow a certain procedure.

It's not a matter of what is fine for you, but what makes easier for more people to help with debugging the issue. Having the file in the tracker means that in 10 years if a similar issue arises the file is still around. > Do you really think that the texture was the case? I don't know, what I do know is that the easier you make to reproduce the issue, the quicker it goes away. That's why I may sound pedantic when insisting on the report to follow a certain procedure.

Added subscriber: @NGMAT

Added subscriber: @NGMAT

i'm also having problems baking this particular file from my windows machine, I also replaced the image file, and it produces no result.

i'm also having problems baking this particular file from my windows machine, I also replaced the image file, and it produces no result.

Added subscriber: @mont29

Added subscriber: @mont29

Delete this texture then, It was for testing bumps after all.
just try to bake a combine.

Delete this texture then, It was for testing bumps after all. just try to bake a combine.

Added subscriber: @dalai-1

Added subscriber: @dalai-1

OK,
sorry for the same name of file
Please try this one
https://dl.dropboxusercontent.com/u/24090090/yyyyyyyyyyyyyyy.blend.zip
These are two objects one on top of the other.
the targeted mesh is multires and has a noise texture as bump (procedural)
the top, the active mesh has only an active texture for making.

My conclusions so far:
hash 7891899
No crashes on OSX, this seems fixed.

  1. Bake from multires
  • combine captures the bumpy noise,
  • tangent/object nmaps don't capture the bump. (no conversion of bumps into nmaps) (it is a feature)
  1. Bake to active
    a. Disconnect the noise texture/bump
  • combine works
  • nmaps working
    b. Connect the noise
  • combine returns black
  • normal bakes fine, it doesn't capture the bump though.

BTW
the previous file, the one I posted yesterday, had a map. Now it doesn't.
However, the reason it was not working (to active) was that I was using the same shading setup on both of the meshes.
Meaning, it should work as the active free texnode was selected. It seems that having a bump on the active object messes the baking procedure.

@dalai-1
it is hard for me to provide a decent bug report.
I tried hard to help.
I hope all these will help you anyway.
Thank you for your time and efforts

OK, sorry for the same name of file Please try this one https://dl.dropboxusercontent.com/u/24090090/yyyyyyyyyyyyyyy.blend.zip These are two objects one on top of the other. the targeted mesh is multires and has a noise texture as bump (procedural) the top, the active mesh has only an active texture for making. My conclusions so far: hash 7891899 No crashes on OSX, this seems fixed. 1. Bake from multires - combine captures the bumpy noise, - tangent/object nmaps don't capture the bump. (no conversion of bumps into nmaps) (it is a feature) 2. Bake to active a. Disconnect the noise texture/bump - combine works - nmaps working b. Connect the noise - combine returns black - normal bakes fine, it doesn't capture the bump though. BTW the previous file, the one I posted yesterday, had a map. Now it doesn't. However, the reason it was not working (to active) was that I was using the same shading setup on both of the meshes. Meaning, it should work as the active free texnode was selected. It seems that having a bump on the active object messes the baking procedure. @dalai-1 it is hard for me to provide a decent bug report. I tried hard to help. I hope all these will help you anyway. Thank you for your time and efforts

This issue was referenced by blender/blender-addons-contrib@8943dc60ec

This issue was referenced by blender/blender-addons-contrib@8943dc60ecd5dd556576fc9b3c9de7b0b77a98f7

This issue was referenced by 8943dc60ec

This issue was referenced by 8943dc60ecd5dd556576fc9b3c9de7b0b77a98f7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8943dc60ec.

Closed by commit 8943dc60ec.

Bug fixed, thanks for the report.

it is hard for me to provide a decent bug report. I tried hard to help. I hope all these will help you anyway.

It definitively helped. It's not easy to report a bug, and I'm sure you will get better over time. It takes some "developer" thinking, which anyone can adquire. Basically the idea is to strip out the file from anything unrelated to the issue. And to minimize the time anyone else would need to verify the problem. If that means you end up spending 2 hours reporting a bug, instead of 30 minutes, those are probably 1.5 hours you saved from a developer, which is highly appreciated ;)

For the records, this is the file I ended up using for my tests bake_bump_highpoly.blend

I took your sample file, simplified (no need for complex spheres, the issue was present in simple planes), reduced the render time (I reduced the image from 1024 to 256 pixels), organized the file (objects are named High, Low, materials as well, and objects are in different layers, so it's easy to test baking with and without selected to active), hook it up the selected objects so all you have to do is to press 'Bake' to see the black image.

Bug fixed, thanks for the report. > it is hard for me to provide a decent bug report. I tried hard to help. I hope all these will help you anyway. It definitively helped. It's not easy to report a bug, and I'm sure you will get better over time. It takes some "developer" thinking, which anyone can adquire. Basically the idea is to strip out the file from anything unrelated to the issue. And to minimize the time anyone else would need to verify the problem. If that means you end up spending 2 hours reporting a bug, instead of 30 minutes, those are probably 1.5 hours you saved from a developer, which is highly appreciated ;) For the records, this is the file I ended up using for my tests [bake_bump_highpoly.blend](https://archive.blender.org/developer/F88164/bake_bump_highpoly.blend) I took your sample file, simplified (no need for complex spheres, the issue was present in simple planes), reduced the render time (I reduced the image from 1024 to 256 pixels), organized the file (objects are named High, Low, materials as well, and objects are in different layers, so it's easy to test baking with and without selected to active), hook it up the selected objects so all you have to do is to press 'Bake' to see the black image.

Bake to active now bakes bumps. Excellent!
Normal maps don't show bumps though, both to active or direct baking.
Of course it is a feature,
Thank you for the nice work so far.

Bake to active now bakes bumps. Excellent! Normal maps don't show bumps though, both to active or direct baking. Of course it is a feature, Thank you for the nice work so far.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40101
No description provided.