Bake API: selected to active needs differentials or it renders black when bump/displacement (fix T40101)